<resources>
    <string name="app_name">Liability Manager</string>

    <!-- Activity names -->
    <string name="color_font_name">Car Plan</string>
    <string name="style_name">Room Plan</string>
    <string name="responsive_layout_name">Printer Plan</string>
    <string name="touch_selectors_name">TV Plan</string>

    <!-- Strings for use in the colors and fonts activity -->
    <string name="light_56">Light 56sp</string>
    <string name="thin_italic_45">Thin Italic 45sp</string>
    <string name="condensed_34">Condensed 34sp</string>
    <string name="reg_24">Regular 24sp</string>
    <string name="medium_20">Medium 20sp</string>
    <string name="smallcaps_16">Smallcaps 16sp</string>

    <!-- Strings used in the style activity -->
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="drafts">Drafts</string>
    <string name="sent">Sent</string>
    <string name="trash">Trash</string>

    <!-- Strings used in the responsive layout activity -->
    <string name="image_placeholder">Image placeholder.</string>
    <string name="sample_title">Material Design</string>
    <string name="photos">Current Photos</string>
    <string name="sample_date">November, 2016</string>
    <string name="sample_body_text">Responsive design is the act of creating designs that respond
        to a variety of screen sizes, shapes, and orientations.</string>

    <!-- Strings used in the touch selectors activity -->
    <string name="person_icon">Icon of a person.</string>
    <string name="first">First_name</string>
    <string name="last">Last_name</string>

    <!-- Settings -->
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="description" translatable="false">ImageView</string>
    <string name="hintText" translatable="false">hintText</string>
    <string name="spd" translatable="false">.spd</string>
    <string name="spp" translatable="false">.spp</string>
    <string name="png" translatable="false">.png</string>
    <string name="Title" translatable="false">Title</string>
    <string name="defaultPenBtn">Default PenList</string>
    <string name="customPenBtn">Custom PenList</string>
    <string name="notepadBtn">NotePad</string>
    <string name="degrees">°</string>
    <string name="composer_keypad" did="IDS_NOTES_BUTTON_TEXT_M_KEYPAD_ABB">Text</string>
    <string name="composer_writing" did="IDS_NOTES_BUTTON_PEN_M_HANDWRITING_ABB">Pen</string>
    <string name="composer_drawing" did="IDS_NOTES_BUTTON_BRUSH_M_DRAWING">Brush</string>
    <string name="composer_image" did="IDS_NOTES_BUTTON_IMAGE_ABB3">Image</string>
    <string name="composer_voice" did="IDS_NOTES_BUTTON_VOICE_ABB">Voice</string>
    <string name="composer_save" did="IDS_NOTES_BUTTON_VOICE_ABB">SAVE</string>
    <string name="composer_todo" did="IDS_NOTES_TBOPT_CHECKLIST">Checklist</string>
    <string name="composer_numbering" did="IDS_NOTES_TBOPT_NUMBERED_LIST">Numbered list</string>
    <string name="composer_bullets" did="IDS_NOTES_TBOPT_BULLET_POINTS">Bullet points</string>
    <string name="composer_bold" did="IDS_NOTES_TBOPT_BOLD_M_TEXT">Bold</string>
    <string name="composer_italic" did="IDS_NOTES_TBOPT_ITALIC_M_TEXT">Italic</string>
    <string name="composer_underline" did="IDS_NOTES_TBOPT_UNDERLINE_M_TEXT_MARK">Underline</string>
    <string name="composer_font_color" did="IDS_NOTES_TBOPT_FONT_COLOUR">Font Colour</string>
    <string name="composer_favorite" did="IDS_NOTES_OPT_FAVOURITES">Favourites</string>
    <string name="composer_lastmodified" did="IDS_NOTES_BODY_LAST_MODIFIED_C_PS">Last modified: %s</string>

</resources>
