<?xml version="1.0" encoding="utf-8"?>

<!-- The main layout is a linear layout of text views -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.android.visualpolish.MainActivity">

    <!-- Text views for each of our listed activities -->
    <!-- All have the ActivityLabelStyle applied -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:background="@color/colorPrimaryLight"
            tools:context="com.example.android.visualpolish.MainActivity">

    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/person_icon"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:src="@drawable/carplan" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorAndFont"
        style="@style/ActivityLabelStyle"
        android:text="@string/color_font_name" />


    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/roomplan"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:contentDescription="@string/person_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/style"
        style="@style/ActivityLabelStyle"
        android:text="@string/style_name" />


    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/printerplan"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:contentDescription="@string/person_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/responsiveLayouts"
        style="@style/ActivityLabelStyle"
        android:text="@string/responsive_layout_name" />


    <ImageView
        android:id="@+id/personIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/monitor_plan"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:contentDescription="@string/person_icon"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/touchSelector"
        style="@style/ActivityLabelStyle"
        android:text="@string/touch_selectors_name" />

        </LinearLayout>
</ScrollView>

</LinearLayout>
